opencore/browser/css/opencore.css
/* ... */
body {
  margin: 0;
  padding: 0 8px;
  color: #333333;
}
#oc-topnav,
#oc-content-container,
#oc-footer {
 max-width: 78em; /* As a rule, measure should be between two and three alphabets long. In other words, between 52 and 78 characters, including spaces. Since characters average out to about one-half EM in width this translates to a minimum width of 26em and a maximum of 39em, or two to three alphabets.   IN OTHER WORDS: avoid changing the width. */
 min-width: 52em;
 margin: 0 auto;
}
#oc-page-container {

}
#oc-topnav {
  padding: 0;
  padding: 0.5em 1em;

}
#oc-content-container {
  padding: 1em;
  min-height: 42em;
  height: auto;
}
#oc-content-main {
  float: left;
  clear: none;
  width: 65%;
}
#oc-content-main.oc-content-main-fullWidth {
  width: 100%;
}
#oc-content-sidebar {
  float: right;
  clear: none;
  width: 33%;
  padding: 0;
  line-height: 1.35;
}
#oc-project-tabs {
}
#oc-project-content {
}
#oc-footer {
  clear: both;
  padding: .5em 1em;
}

/* @TOPNAV - Global header
--------------------------------------- */
#oc-topnav {
  position: relative;
  text-align: left;
}
#oc-topnav h1 {
  padding: 0.5em 0 0.25em;
  margin: 0;
}
ul#oc-topnav-context {
  list-style-type: none;
  display: block;
  margin: 0;
  padding: 0;
}
ul#oc-topnav-context li {
  float: left;
  clear: none;
  display: block;
  padding: 0.25em 0.5em;
  margin: 0 0.25em;
}
ul#oc-topnav-context li a {
  padding: .25em .5em;
}
#oc-topnav a:hover {
}
ul#oc-topnav-context {
  font-weight: bold;
  font-size: 10px;
  margin: 0;
}
ul#oc-topnav-context li {
  margin: 0 0.25em;
  padding: 0;
  background: #665D55;
}
ul#oc-topnav-context li.oc-topnav-selected {
}
#oc-topnav-tab {
  position: absolute;
  top: 0;
  right: 1em;
  width: 31%;
  padding: 0 0.5em;
  background: #4D4945;
}
#oc-topnav-tab form#oc-sitesearch {
  margin: 0;
  padding: 0;
  white-space: nowrap;
}
#oc-topnav-tab form#oc-sitesearch input.oc-input-typeText {
  display: inline; 
  font-size: 10px;
  border: 1px solid #999;
  width: 40%;
  background: #fff url("/++resource++img/magglass.gif") no-repeat 3px center;
  padding-left: 16px;
}
#oc-topnav-globalmenu-container {
text-align: right;
}
#oc-topnav-globalmenu {
text-align: left;
}
#oc-topnav-usermenu-container {
 margin-top: 0.5em;
 padding-top: 0;
 border-top: 1px dotted #ccc;
}
#oc-topnav-usermenu {
 float: right;
}
.oc-usermenu-messagecount,
.oc-mystuff-messagecount {
  color: #EB852B;
}
.oc-selected .oc-usermenu-messagecount {
  visibility: hidden;
}
.oc-dropdown-list {
  position: relative;
  padding: 0;
  margin: 0.25em 0;
  list-style: none;
  font-size: 10px;
  text-align: left;
  font-weight: bold;
  text-transform: lowercase;
}
.oc-dropdown-list li {
  float: left;
  clear: none;
  margin: 0 0.25em;
  padding: 0 0.25em;
  font-weight: bold;
}
.oc-dropdown-list li a:hover {
  text-decoration: underline;
}
.oc-dropdown-list li.oc-dropdown-container {
  position: relative;
  background: url("/++resource++img/dropdown-nub-closed.gif") no-repeat 98% 7px;
  padding-right: 15px;
  cursor: pointer;
}
.oc-dropdown-list li.oc-dropdown-container.oc-hover {
  border-bottom: none;
  background-color: transparent;
}
.oc-dropdown-list li.oc-dropdown-container.oc-hover a {
  background: transparent;
}
.oc-dropdown-list ul li.oc-dropdown-container.oc-hover {
  border: none;
}
.oc-dropdown-list li.oc-dropdown-container.oc-selected {
  background: url("/++resource++img/dropdown-nub-open.gif") no-repeat 98% 7px;
  border-bottom: none;
}
.oc-dropdown-list li.oc-dropdown-container ul {
  position: absolute;
  top: 1.8em;
  left: 0;
  margin: 0;
  padding: 0;
  width: 12em;
  background: #665D55;
  border: 1px solid #3D3935;
  border-right: 2px solid #332F2A;
  border-bottom: 2px solid #332F2A;
  z-index: 1000;
}
.oc-dropdown-list li.oc-dropdown-container li {
  float: left;
  list-style: none;
  clear: left;
  width: 100%;
  padding: 0;
  margin: 0;
  border: none;
}
.oc-dropdown-list li.oc-dropdown-container li a {
  display: block;
  margin: 0;
  padding: 0.125em .25em;
}
.oc-dropdown-list li.oc-dropdown-container li a:hover {
  background: #EB852B;
}
.oc-dropdown-list hr.oc-usermenu-divider {
  border: none;
  border-bottom: 1px solid #eee;
  margin: 0.25em 0;
}

/* @FOOTER - Global footer
--------------------------------------- */
#oc-footer ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  float: right;
  text-transform: uppercase;
  font-size: 9px;
}
#oc-footer li {
  display: inline;
  padding: 0 0.5em;
}
#oc-footer-about {
  text-align: left;
}
#oc-footer #oc-footer-about  a {
  text-decoration: underline;
}

/* version list */
#oc-version-list { 
  position: absolute;
  top: 0;
  left: 0;
  background: red;
  color: #fff;
  padding: 10px;
}

/* LAYOUT for @OpenPlans Pages
-------------------------------------------- */
/* This is where general layout elements within the content of a page are defined. Could also aply to how we implement templates. 
  
/* GENERIC layout elements */

.oc-plainList { /* list with no formatting */
  list-style-type: none;
  padding: 0;
  margin: 0 0 1em;
}
dl.oc-plainList {
  line-height: normal;
}
dl.oc-plainList dt {
  font-weight: bold;
}
dl.oc-plainList dd {
  margin: 0 0 1em;
}
.oc-inlineList { /* comma-separated list (space-separated in IE) */
  list-style: none;
  margin: 0;
  padding: 0;
}
.oc-inlineList li {
  display: inline;
}
.oc-inlineList li:after {
  content: ", ";
}
.oc-inlineList li:last-child:after {
  content: "";
}
.oc-boxy {
  margin-bottom: 1em;
}
.oc-boxy h1,
.oc-boxy h2,
.oc-boxy h3,
.oc-boxy h4,
.oc-boxy h5 {
  margin: 0 0 0.5em;
}
.oc-boxy-content {
  margin: 0;
  padding: 0;
}
.oc-boxy legend.oc-legend-heading {
	padding-left: 0.25em;
	padding-right: 0.25em;
}
.oc-boxy textarea {
  margin: 0;
}

/* GENERIC search results & lineups */

.oc-lineup,
.oc-directory {
}
.oc-lineup-list {
  list-style-type: none;
  margin:  0;
  padding: 0;
  clear: both;
  border-top: 2px solid #eee;

}
/* ... */

